# Q-teaching

./: README.md  install  setup.cfg
Q.egg-info/: SOURCES.txt
Q.egg-info/.ipynb_checkpoints/: PKG-INFO-checkpoint
benchmark/: README.md
benchmark/FEP_ligand_binding/: README.md
benchmark/FEP_ligand_binding/2.Q7/: setup.py  submit.py
benchmark/FEP_solvation/: README.md
benchmark/FEP_solvation/2.Q7/: setup.py  submit.py
benchmark/MD_water/: runBENCHMARK.py  submit.sh
benchmark/MD_water/no_ion/: 10A.tar.xz  15A.tar.xz  20A.tar.xz  25A.tar.xz  30A.tar.xz  run_test.py
data/QmapFEP/maps/: CDK2_network.txt
data/ff/: OPLS2015.lib  OPLS2015.prm
dockerfiles/q-fortran/: Dockerfile
dockerfiles/q-ifort/: Dockerfile
dockerfiles/qgpu-cuda-10.2-ubuntu18.04/: Dockerfile
env/: settings.py
notebook/: QligFEP.ipynb  README.md  Untitled.ipynb  analyze_map.py  mcs_align.ipynb  qligfep_benchmarking.ipynb
notebook/.ipynb_checkpoints/: 0.QmapFEP-checkpoint.ipynb  QligFEP-checkpoint.ipynb  Rgroup-highlights-checkpoint.ipynb  analyze_map-checkpoint.py  mcs_align-checkpoint.ipynb  nx-checkpoint.html  qligfep_benchmarking-checkpoint.ipynb
qligfep-old/: IO.py  QligFEPold.py  opls2Q.py  protprep.py  settings.py  setupFEP.py
qligfep-old/QligFEP.egg-info/: PKG-INFO  SOURCES.txt
qligfep-old/scripts/: generate_opls.py  renumber.py
share/: ._qanalyse.py  IO.py  md.py
share/templates/: RUN.py
src/: QligFEP.py  QmapFEP.py  qdyn.py  qfep.py
src/q6/: makefile  prep.f90
test/: README.md  runTEST.py
test/data/FEP_solvation/: README.md
test/q6/: readme.md
(+6725 files in other folders)
